# reconciliation-platform-378

./: .env.example  .eslintrc.json  .frenly-file-locks.json  .frenly-maintenance-config.json  .gitignore  .gitleaks.toml  .jscpd.json  .lintstagedrc.json  .prettierignore  .prettierrc.json  .secrets.baseline  .unimportedrc.json  100_SCORE_IMPROVEMENT_SUMMARY.md  8_LAYER_QUANTUM_AUDIT_EXECUTION_REPORT.md  ACCELERATED_IMPLEMENTATION_PLAN.md  ACCELERATION_COMPLETE.md  ACCESSIBILITY_CHECKLIST.md  ACCESSIBILITY_COMPLETION_REPORT.md  ACCESSIBILITY_NEXT_STEPS.md  ACCESSIBILITY_VERIFICATION_COMPLETE.md  ACTION_PLAN_COMPLETION_SUMMARY.md  ACTION_PLAN_NOW.md  ACTION_PLAN_PROGRESS.md  ADDITIONAL_DIAGNOSTIC_ASPECTS_PROPOSAL.md  ADDITIONAL_DUPLICATION_FINDINGS.md  ADVANCED_DIAGNOSTIC_FRAMEWORK_V2.md  AGENT1_COMPLETION_SUMMARY.md  AGENT1_FINAL_SUMMARY.md  AGENT1_FINAL_VERIFICATION.md  AGENT1_IMPLEMENTATION_VERIFICATION.md  AGENT1_TASKS_COMPLETION_SUMMARY.md  AGENT1_VERIFICATION_REPORT.md  AGENT2_100_PERCENT_COVERAGE_PUSH.md  AGENT2_COMPLETION_SUMMARY.md  AGENT2_COVERAGE_TODOS.md  AGENT2_FINAL_STATUS.md  AGENT2_FRONTEND_TESTING_COMPLETE.md  AGENT2_NEXT_STEPS_PROPOSAL.md  AGENT2_OPTION1_COMPLETE.md  AGENT2_OPTION1_PROGRESS.md  (+701 more)
backend/: .tarpaulin.toml  BACKEND_REGISTER_FIX.md  Cargo.toml  Cargo_simple.toml  DUPLICATE_CODE_CLEANUP_COMPLETE.md  DUPLICATE_CODE_CLEANUP_PLAN.md  DUPLICATE_CODE_CLEANUP_STATUS.md  Dockerfile  ENVIRONMENT_SETUP.md  Makefile  PASSWORD_CODE_DUPLICATION_ANALYSIS.md  README.md  TEST_DOCUMENTATION.md  TEST_ERROR_FIX_GUIDE.md  apply-indexes.sh  coverage.sh  diesel.toml  metrics.d  migrations_lib.rs  openapi.yaml  run_coverage.sh  run_tests.sh  string.d  test_minimal.rs  test_results.txt
backend/.cargo/: config.refactoring.toml  config.toml
backend/migrations/: .gitkeep  20241201000000_create_subscriptions.rs
backend/scripts/: apply-query-indexes.rs
backend/src/: auth_service_tests.rs  config.rs  database_migrations.rs  errors.rs  file_service_tests.rs  handlers.rs  integration_test_suite.rs  integrations.rs  lib.rs  main.rs  main_graceful_shutdown.rs  main_simple.rs  monitoring.rs  performance_test_suite.rs  performance_tests.rs  reconciliation_service_tests.rs  schema.rs  startup.rs  test_data_management.rs  test_utils.rs  unit_tests.rs  user_service_tests.rs  websocket.rs
backend/src/api/: gdpr.rs  mod.rs  openapi.rs
backend/src/config/: better_auth.rs  billing_config.rs  email_config.rs  mod.rs  monitoring.rs  password_config.rs  shard_config.rs
backend/src/cqrs/: command.rs  event_bus.rs  handlers.rs  mod.rs  query.rs
backend/src/database/: adaptive_pool.rs  mod.rs  replication.rs  transaction.rs
backend/src/events/: mod.rs
backend/src/examples/: startup_example.rs
backend/src/graphql/: mod.rs
backend/src/handlers/: adjudication.rs  ai.rs  analytics.rs  auth.rs  cashflow.rs  compliance.rs  files.rs  gdpr_handlers.rs  health.rs  helpers.rs  ingestion.rs  logs.rs  metrics.rs  mod.rs  monitoring.rs  notifications.rs  onboarding.rs  password_manager.rs  profile.rs  projects.rs  reconciliation.rs  security.rs  security_events.rs  settings.rs  sql_sync.rs  sync.rs  system.rs  teams.rs  types.rs  users.rs  v2.rs  visualization.rs  workflows.rs
backend/src/handlers_modules_backup/: file_upload.rs  health.rs  helpers.rs  mod.rs  types.rs
backend/src/middleware/: advanced_rate_limiter.rs  api_versioning.rs  auth.rs  better_auth.rs  cache.rs  circuit_breaker.rs  combined_security.rs  correlation_id.rs  distributed_tracing.rs  dual_auth.rs  error_handler.rs  logging.rs  logging_config.rs  logging_error_config.rs  metrics.rs  mod.rs  performance.rs  rate_limit.rs  request_tracing.rs  request_validation.rs  security.rs  sentry.rs  validation.rs  zero_trust.rs
backend/src/models/: adjudication.rs  cashflow.rs  ingestion.rs  mod.rs  notification.rs  schema.rs  security_policy.rs  subscription.rs  team.rs  visualization.rs  workflow.rs
backend/src/monitoring/: metrics.rs  mod.rs
backend/src/services/: accessibility.rs  adjudication.rs  advanced_cache.rs  advanced_metrics.rs  advanced_reconciliation.rs  ai.rs  analytics.rs  api_versioning.rs  auth.rs  backup_recovery.rs  billing.rs  cache.rs  cashflow.rs  compliance_reporting.rs  critical_alerts.rs  data_source.rs  data_source_config.rs  database_migration.rs  database_sharding.rs  database_sharding_stub.rs  email.rs  enhanced_user_management.rs  error_logging.rs  error_recovery.rs  error_translation.rs  file.rs  ingestion.rs  internationalization.rs  internationalization_data.rs  internationalization_models.rs  metrics.rs  mobile_optimization.rs  mod.rs  monitoring.rs  notification.rs  offline_persistence.rs  optimistic_ui.rs  optimized_file_processing.rs  password_manager.rs  password_manager_db.rs  (+28 more)
backend/src/startup/: error_handler.rs
backend/src/tests/: fixtures.rs  helpers.rs  mod.rs
backend/src/utils/: authorization.rs  crypto.rs  (+11 more)
backend/tests/: ALL_FIXES_COMPLETE.md  ALL_ISSUES_COMPLETE.md  COMPLETION_REPORT.md  FINAL_FIXES_SUMMARY.md  GROUP_1_INSTRUCTIONS.md  GROUP_2_INSTRUCTIONS.md  GROUP_3_INSTRUCTIONS.md  GROUP_FIXES_COMPLETE.md  PARALLEL_WORK_SUMMARY.md  TEST_FIXES_COMPLETE.md  TEST_FIXES_DIVISION.md  TEST_FIXES_NEEDED.md  accessibility_service_tests.rs  adjudication_service_tests.rs  advanced_metrics_service_tests.rs  ai_handler_tests.rs  ai_service_tests.rs  analytics_api_tests.rs  analytics_handler_tests.rs  analytics_service_tests.rs  api_endpoint_tests.rs  api_tests.rs  api_versioning_service_tests.rs  auth_handler_comprehensive_tests.rs  auth_handler_tests.rs  auth_service_comprehensive_tests.rs  backup_recovery_service_tests.rs  better_auth_tests.rs  billing_service_tests.rs  cache_service_additional_tests.rs  cache_service_tests.rs  cashflow_service_tests.rs  compliance_handler_tests.rs  compliance_service_tests.rs  correlation_id_tests.rs  critical_flow_tests.rs  data_source_service_tests.rs  database_migration_service_tests.rs  e2e_tests.rs  email_service_tests.rs  (+72 more)
reconciliation-rust/: Cargo.toml  docker-compose.dev.yml
reconciliation-rust/src/: lib.rs  main.rs  test_server.rs
(+3568 files in other folders)
