[package]
name = "reconciliation-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix-multipart = "0.6"

# Database
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.1"
postgres = "0.19"
r2d2 = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.32", features = ["serde"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"
semver = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = "0.3"
lazy_static = "1.4"

# Configuration
config = "0.13"
dotenv = "0.15"

# Caching
redis = { version = "0.24", features = ["tokio-comp"] }

# File handling
mime = "0.3"
mime_guess = "2.0"
csv = "1.3"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# WebSocket
actix-web-actors = "4.2"
actix = "0.13"

# Logging
log = "0.4"
env_logger = "0.10"

# Monitoring
prometheus = "0.13"

# Hashing
sha2 = "0.10"
hmac = "0.12"

# Encoding
base64 = "0.21"

# Random
rand = "0.8"
bigdecimal = { version = "0.4.9", features = ["serde"] }

# Compression
flate2 = "1.0"

[dev-dependencies]
tokio-test = "0.4"
actix-web = { version = "4.4", features = ["macros"] }
futures = "0.3"
serde_json = "1.0"
semver = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
