[package]
name = "reconciliation-backend"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3              # Maximum optimization
lto = true                 # Link-time optimization
codegen-units = 1          # Better optimization
strip = true               # Strip debug symbols
panic = "abort"            # Smaller binary size
overflow-checks = false    # Performance optimization
debug = false              # No debug info in release

[dependencies]
# Web framework
actix-web = "4.4"
actix-multipart = "0.6"
actix-web-actors = "4.2"
actix-cors = "0.7"
actix-files = "0.6"
http = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
actix-service = "2.0"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
diesel = { version = "2.0", features = ["postgres", "chrono", "uuid", "numeric", "r2d2", "serde_json"] }
diesel_migrations = "2.0"
diesel_derives = "2.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Additional dependencies
regex = "1.0"
bigdecimal = { version = "0.4", features = ["serde"] }
semver = "1.0"
chrono-tz = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
base64 = "0.22"

# Authentication & Security
jsonwebtoken = "9.0"
bcrypt = "0.17"
argon2 = "0.5"
rand = "0.8"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Redis
redis = { version = "0.23", features = ["tokio-comp"] }

# File handling
csv = "1.2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
tempfile = "3.8"

# Logging
env_logger = "0.10"
log = "0.4"

# Email
lettre = "0.11"

# OpenAPI/Swagger documentation
utoipa = { version = "3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0", features = ["actix-web"] }

# Monitoring
prometheus = "0.13"
once_cell = "1.19"
sentry = { version = "0.32", features = ["tower", "tracing", "log"] }
sentry-actix = "0.32"

# Validation
validator = { version = "0.16", features = ["derive"] }

# AWS SDK (for secrets management and S3 backups)
aws-config = "1.0"
aws-sdk-secretsmanager = "1.0"
aws-sdk-s3 = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"
num_cpus = "1.0"

# WebSocket
actix = "0.13"
strsim = "0.11.1"
urlencoding = "2.1.3"

# Stripe integration - temporarily disabled
# stripe-rust = "0.12"

# Testing
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
actix-service = "2.0"
