[package]
name = "reconciliation-backend"
version = "0.1.0"
edition = "2021"
default-run = "reconciliation-backend"

# Optional binary for applying query indexes
# Uncomment if needed: cargo run --bin apply-query-indexes
# [[bin]]
# name = "apply-query-indexes"
# path = "scripts/apply-query-indexes.rs"

# Minimal test binary (commented out - was for debugging)
# [[bin]]
# name = "test-minimal"
# path = "src/bin/test-minimal.rs"

# Main binary
[[bin]]
name = "reconciliation-backend"
path = "src/main.rs"

# Binary for setting initial passwords
[[bin]]
name = "set-initial-passwords"
path = "src/bin/set-initial-passwords.rs"

[profile.release]
opt-level = 3              # Maximum optimization
lto = true                 # Link-time optimization
codegen-units = 1          # Better optimization
strip = false              # Keep debug symbols for troubleshooting (was: true)
panic = "unwind"           # Use unwind for better error messages (was: "abort")
overflow-checks = false    # Performance optimization
debug = 1                  # Include line numbers for debugging (was: false)

[dependencies]
# Web framework
actix-web = "4.4"
actix-multipart = "0.6"
actix-web-actors = "4.2"
actix-cors = "0.7"
actix-files = "0.6"
http = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
actix-service = "2.0"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
diesel = { version = "2.0", features = ["postgres", "chrono", "uuid", "numeric", "r2d2", "serde_json", "network-address"] }
diesel_migrations = "2.0"
diesel_derives = "2.0"

# Additional dependencies
regex = "1.0"
bigdecimal = { version = "0.4", features = ["serde"] }
semver = "1.0"
chrono-tz = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
base64 = { version = "0.22", features = ["std"] }

# Authentication & Security
jsonwebtoken = "9.0"
bcrypt = "0.17"
argon2 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
pbkdf2 = "0.12"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# OAuth2
oauth2 = "4.4"

# URL parsing
url = "2.4"

# 2FA/TOTP
totp-rs = { version = "5.4", features = ["qr"] }

# QR code generation
qrcode-generator = "4.1"

# Redis
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = { version = "0.14", features = ["serde"] }

# File handling
csv = "1.2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
tempfile = "3.8"

# Logging
env_logger = "0.10"
log = "0.4"

# Email
lettre = "0.11"

# OpenAPI/Swagger documentation
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["actix-web"] }

# Monitoring
prometheus = "0.14"  # Updated from 0.13 (fixes protobuf vulnerability)
once_cell = "1.19"
sentry = { version = "0.32", features = ["tower", "tracing", "log"] }
sentry-actix = "0.32"

# Validation
validator = { version = "0.20", features = ["derive"] }  # Updated from 0.16 (fixes idna vulnerability)

# AWS SDK (for secrets management and S3 backups)
aws-config = "1.0"
aws-sdk-secretsmanager = "1.0"
aws-sdk-s3 = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.15.8"  # Updated to latest patch version
dotenvy = "0.15"  # Replaces dotenv 0.15 (unmaintained)
num_cpus = "1.0"

# WebSocket
actix = "0.13"
strsim = "0.11.1"
urlencoding = "2.1.3"
ipnetwork = "0.21.1"

# Stripe integration - temporarily disabled
# stripe-rust = "0.12"

# Testing
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
actix-service = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }

# Test coverage (install with: cargo install cargo-tarpaulin)
# Usage: cargo tarpaulin --out Html --output-dir coverage

[lints.rust]
rust_2021_idioms = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "warn"
todo = "warn"
perf = "warn" # perf_optimizations might not be the right group name, 'perf' is standard
complexity = "warn"
redundant_closure_for_method_calls = "warn"
explicit_deref_methods = "warn"
map_unwrap_or = "warn"
missing_docs_in_private_items = "warn"
semicolon_if_nothing_returned = "warn"
match_bool = "warn"
