
[package]
name = "reconciliation-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
chrono = { version = "0.4.23", features = ["serde"] }
thiserror = "1.0"
diesel = { version = "2.1", features = ["sqlite", "chrono", "serde_json", "r2d2"] }
diesel_migrations = "2.1"
dotenv = "0.15"
